objects/TASKRAY__trTaskInboxNotification__c.object
<CustomObject>
    <description>This is a TaskRay &quot;behind the scenes&quot; object that is used for in-app task notifications.</description>
    <fields>
        <fullName>TASKRAY__trNotificationColor__c</fullName>
        <label>Notification Color</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trNotificationDate__c</fullName>
        <label>Notification DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trNotificationLabelText__c</fullName>
        <label>Notification Label Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trNotificationText__c</fullName>
        <label>Notification Text</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trNotificationType__c</fullName>
        <label>Notification Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trNotifiedUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Notified User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>TaskRay_Task_Inbox_Notifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trTaskRayTask__c</fullName>
        <label>TaskRay Task</label>
        <referenceTo>TASKRAY__Project_Task__c</referenceTo>
        <relationshipLabel>TaskRay Task Inbox Notifications</relationshipLabel>
        <relationshipName>TaskRay_Task_Inbox_Notifications</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>TaskRay Task Inbox Notification</label>
    <nameField>
        <label>TaskRay Task Inbox Notification Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TaskRay Task Inbox Notifications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>